# simple_calculator_2024

./: Dockerfile  pyproject.toml
src/calculator/: calculator.py
tests/: test_calculator.py
